[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/textures/entities/scan.png" type="Texture" id=1]
[ext_resource path="res://src/game/levels/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=82]
extents = Vector2( 30, 28.4167 )

[sub_resource type="Animation" id=142]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 17 ]
}

[sub_resource type="Animation" id=144]
resource_name = "dead"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 524288 ]
}

[sub_resource type="Animation" id=143]
resource_name = "moving"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="RectangleShape2D" id=141]
extents = Vector2( 35, 26.5 )

[node name="Scan" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 32
script = ExtResource( 2 )
right = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.25, -6.25 )
scale = Vector2( 1.43939, 1.5 )
texture = ExtResource( 1 )
hframes = 8
vframes = 5
frame = 17

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( 5.33333, 1.75 )
shape = SubResource( 82 )

[node name="EnemyAnim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 142 )
anims/dead = SubResource( 144 )
anims/moving = SubResource( 143 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 5, -6.5 )
shape = SubResource( 141 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
